--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==3.1.0
-Pillow==11.1.0
-google-genai==1.5.0
-python-dotenv==1.0.1
-gunicorn==23.0.0
+flask>=3.1.0
+Pillow>=10.0.0
+openai>=1.63.1
+python-dotenv>=1.0.1
+gunicorn>=23.0.0
 pymongo>=4.6.0
 bcrypt>=4.1.0
 
