--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=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
 SECRET_KEY=visionclaim-secret-key-change-me
 MONGO_URI=mongodb://localhost:27017
 MONGO_DB=visionclaim
+# External AI keys removed as per user request for local API
