--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 flask>=3.1.0
 opencv-python>=4.8.0
-openai>=1.63.1
 python-dotenv>=1.0.1
 gunicorn>=23.0.0
 pymongo>=4.6.0
 bcrypt>=4.1.0
-
+fastapi>=0.110.0
+uvicorn>=0.27.0
+Pillow>=10.2.0
+python-multipart>=0.0.9
